--- a/firstapp/src/app/app.component.html
+++ b/firstapp/src/app/app.component.html
@@ -2,10 +2,11 @@
 <div class="container">
     <div class="row">
         <div class="col-md-2">
-            <app-menu></app-menu>
+            <!-- <app-menu></app-menu> -->
         </div>
         <div class="col-md-10">
-            <app-home></app-home>
+            <!-- <app-home></app-home> -->
+            <app-dashboard></app-dashboard>
         </div>
     </div>
 </div>
