--- a/todoapp/src/app/app.component.html
+++ b/todoapp/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-header></app-header>
-<app-additem></app-additem>
-<app-todolist></app-todolist>
+<app-additem (addEvent)="getTodoItem($event)"></app-additem>
+<app-todolist (updateItemEvent)="updateTodoItem($event)" (deleteItemEvent)="deleteTodoItem($event)" [todoData]="todos"></app-todolist>
 <app-footer></app-footer>
