--- a/todoapp/src/app/components/todoitem/todoitem.component.html
+++ b/todoapp/src/app/components/todoitem/todoitem.component.html
@@ -1,4 +1,5 @@
 <div>
-    <input type="checkbox" />
-    {{todoitem.todo}}
+    <input [checked]="todoitem.isCompleted" type="checkbox" (change)="updateTodoItem(todoitem)" />
+    <span class="px-1" [style.textDecoration]="todoitem.isCompleted?'line-through':'none'">{{todoitem.todo}}</span>
+    <i (click)="deleteTodoItem(todoitem.id)" class="fa-solid fa-trash-can float-end text-danger"></i>
 </div>
