--- a/todoapp/src/app/components/todolist/todolist.component.html
+++ b/todoapp/src/app/components/todolist/todolist.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <ul class="list-group">
-        <li class="list-group-item" *ngFor="let item of todos">
-            <app-todoitem [todoitem]="item"></app-todoitem>
+        <li class="list-group-item" *ngFor="let item of todoData">
+            <app-todoitem (updateEvent)="updateItem($event)" (deleteEvent)="deleteItem($event)" [todoitem]="item"></app-todoitem>
         </li>
     </ul>
 </div>
