--- a/material-contact-app/src/app/header/header.component.html
+++ b/material-contact-app/src/app/header/header.component.html
@@ -6,7 +6,7 @@
     <a mat-stroked-button routerLink="/">Home</a>
     <a mat-stroked-button routerLink="/add">Add Contact</a>
     <span class="example-spacer"></span>
-    <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
+    <button mat-icon-button class="example-icon favorite-icon">
         <mat-icon>favorite</mat-icon>
     </button>
     <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
